# ouzo-game

./: .gitignore  CMakeLists.txt  ClassDiagram.cd  README.md  build.sh  build_debug.sh
assets/models/: circle_in_3d.mtl  hat.mtl
assets/shaders/: build.bat  diffuse.frag.glsl  diffuse.frag.hlsl  diffuse.fsh  diffuse.vert.glsl  diffuse.vert.hlsl  diffuse.vsh  point.frag.glsl  point.vert.glsl  uitext.frag.glsl  uitext.fsh  uitext.vert.glsl
cmake/Modules/: FindGLFW.cmake
include/: atlas_factory.hpp  break.hpp  buffer.hpp  draw_attribs.hpp  font.h  font.hpp  font_chars.h  font_chars.hpp  game.h  game.hpp  graphics.h  graphics.hpp  instance_data.hpp  matrix.hpp  scene.h  scene_ctb.hpp  scene_game.h  scene_gamemode.hpp  scene_menu.h  scene_menu.hpp  scene_osu.hpp  scene_test.h  scene_test.hpp  shader.h  shader.hpp  sound.hpp  text.h  text.hpp  texture.h  texture.hpp  ui.h  ui.hpp  uic_button.hpp  uic_text.hpp
include/audio/: audio_manager.hpp  sound.hpp  sound_manager.hpp
include/d3d/: d3d_graphics.hpp  winutils.hpp
include/graphics_common/: buffer.hpp  draw_attribs.hpp  framebuffer.hpp  graphics.hpp  instance_data.hpp  matrix.hpp  shader.hpp  sprite_verts.hpp  text.hpp  texture.hpp  wavefront.hpp
include/osu/: osu_beatmap.hpp  osu_object.hpp  osu_render.hpp
include/scene/: scene_benchmark.hpp  scene_ctb.hpp  scene_gamemode.hpp  scene_menu.hpp  scene_osu.hpp
include/ui/: ui.hpp  uic_texture.hpp
ouzo.xcodeproj/: project.pbxproj
ouzo.xcodeproj/project.xcworkspace/xcshareddata/: ouzo.xcscmblueprint
ouzo.xcodeproj/project.xcworkspace/xcuserdata/skillian.xcuserdatad/: UserInterfaceState.xcuserstate
ouzo.xcodeproj/xcuserdata/skillian.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ouzo.xcodeproj/xcuserdata/skillian.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  ouzo.xcscheme  xcschememanagement.plist
src/: atlas_factory.cpp  buffer.cpp  font.cpp  game.cpp  gl_core_atlas_factory.cpp  gl_core_draw_attribs.cpp  gl_core_graphics.cpp  graphics.cpp  graphics_gl_core.cpp  instance_data.cpp  main.cpp  matrix.cpp  scene.cpp  scene_ctb.cpp  scene_gamemode.cpp  scene_menu.cpp  scene_osu.cpp  scene_test.cpp  shader.cpp  sound.cpp  text.cpp  texture.cpp  ui.cpp  uic_button.cpp  uic_text.cpp
src/audio/: audio_manager.cpp  sound.cpp  sound_manager.cpp
src/d3d/: d3d_buffer.cpp  d3d_graphics.cpp  d3d_matrix.cpp  d3d_shader.cpp  d3d_texture.cpp  winutils.cpp
src/gl_core/: gl_core_atlas_factory.cpp  gl_core_buffer.cpp  gl_core_draw_attribs.cpp  gl_core_framebuffer.cpp  gl_core_graphics.cpp  gl_core_matrix.cpp  gl_core_program.cpp  gl_core_shader.cpp  gl_core_texture.cpp
src/graphics_common/: atlas_factory.cpp  buffer.cpp  font.cpp  graphics.cpp  instance_data.cpp  matrix.cpp  shader.cpp  sprite_verts.cpp  text.cpp  wavefront.cpp
src/osu/: osu_beatmap.cpp  osu_circle.cpp  osu_object.cpp  osu_render.cpp
src/scene/: scene_benchmark.cpp  scene_ctb.cpp  scene_menu.cpp  scene_osu.cpp
src/scenes/: scene_ctb.cpp  scene_gamemode.cpp  scene_osu.cpp  scene_test.cpp
src/ui/: ui.cpp  uic_text.cpp  uic_texture.cpp
